--- a/mallet/404.html
+++ b/mallet/404.html
@@ -28,16 +28,10 @@ index: false
             <div class="_logo"><a href="/dove/">Dove</a></div>
           </header>
           <nav class="_nav">
-            <div>
-<a href="/dove/mallet/"><b>Mallet</b></a>
-<i class="_icon"><i class="isvg">
+            <div><a href="/dove/mallet/"><b>Mallet</b></a><i class="_icon"><i class="isvg">
                   <svg viewBox="0 0 24 24">
                     <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
-                  </svg></i></i>
-<a href="/dove/mallet/preview.html">Preview</a>
-<i class="_icon"><i class="itext">&bull;</i></i>
-<a href="/dove/mallet/home.html">Home</a>
-<a href="/dove/mallet/page.html">Page</a> <b>404</b>
+                  </svg></i></i><a href="/dove/mallet/preview.html">Preview</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/test.html">Test</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/home.html">Home</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/page.html">Page</a><i class="_icon"><i class="itext">&bull;</i></i><b>404</b>
             </div>
           </nav>
           <main class="_main">
