--- a/prime/index.html
+++ b/prime/index.html
@@ -16,6 +16,7 @@ index: false
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
     <meta id="_color_scheme" name="color-scheme" content="light dark"/>
     <meta id="_theme_color" name="theme-color" content="#222"/>
+    <style>.isvg svg { width:1em;height:1em }</style>
     <link id="_style" rel="stylesheet" href="{{ site.base_url }}/assets/prime/css/style.css?r={{ site.revision | default: '0' }}.{{ site.github.build_revision | default: '0' }}"/>
 {% include layout_head.html %}
 <!--[if lt IE 9]><script src="https://unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
@@ -38,27 +39,15 @@ index: false
               <article class="_article">
                 <div class="_layout">
                   <h1>Prime</h1>
-                  <nav class="mv"><b>Html</b>
-<i class="_icon"><i class="isvg">
+                  <nav class="mv"><b>Html</b><i class="_icon"><i class="isvg">
                         <svg viewBox="0 0 24 24">
                           <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
-                        </svg></i></i>
-<a href="/dove/prime/preview.html">Preview</a>
-<i class="_icon"><i class="itext">&bull;</i></i>
-<a href="/dove/prime/home.html">Home</a>
-<a href="/dove/prime/page.html">Page</a>
-<a href="/dove/prime/404.html">404</a>
+                        </svg></i></i><a href="/dove/prime/preview.html">Preview</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/prime/test.html">Test</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/prime/home.html">Home</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/prime/page.html">Page</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/prime/404.html">404</a>
                   </nav>
-                  <nav class="mv"><b>Markdown</b>
-<i class="_icon"><i class="isvg">
+                  <nav class="mv"><b>Markdown</b><i class="_icon"><i class="isvg">
                         <svg viewBox="0 0 24 24">
                           <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
-                        </svg></i></i>
-<a href="/dove/prime/md/preview.html">Preview</a>
-<i class="_icon"><i class="itext">&bull;</i></i>
-<a href="/dove/prime/md/home.html">Home</a>
-<a href="/dove/prime/md/page.html">Page</a>
-<a href="/dove/prime/md/404.html">404</a>
+                        </svg></i></i><a href="/dove/prime/md/preview.html">Preview</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/prime/md/home.html">Home</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/prime/md/page.html">Page</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/prime/md/404.html">404</a>
                   </nav>
                 </div>
               </article>
