--- a/core/404.html
+++ b/core/404.html
@@ -31,16 +31,10 @@ index: false
           </header>
           <nav class="_nav">
             <div class="_layout _960">
-              <div>
-<a href="/dove/core/"><b>Core</b></a>
-<i class="_icon"><i class="isvg">
+              <div><a href="/dove/core/"><b>Core</b></a><i class="_icon"><i class="isvg">
                     <svg viewBox="0 0 24 24">
                       <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
-                    </svg></i></i>
-<a href="/dove/core/preview.html">Preview</a>
-<i class="_icon"><i class="itext">&bull;</i></i>
-<a href="/dove/core/home.html">Home</a>
-<a href="/dove/core/page.html">Page</a> <b>404</b>
+                    </svg></i></i><a href="/dove/core/preview.html">Preview</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/core/test.html">Test</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/core/home.html">Home</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/core/page.html">Page</a><i class="_icon"><i class="itext">&bull;</i></i><b>404</b>
               </div>
             </div>
           </nav>
