--- a/nova/preview.html
+++ b/nova/preview.html
@@ -31,16 +31,10 @@ index: false
           </header>
           <nav class="_nav">
             <div class="_layoutx _960">
-              <p>
-<a href="/dove/nova/"><b>Nova</b></a>
-<i class="_icon"><i class="isvg">
+              <p><a href="/dove/nova/"><b>Nova</b></a><i class="_icon"><i class="isvg">
                     <svg viewBox="0 0 24 24">
                       <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
-                    </svg></i></i> <b>Preview</b>
-<i class="_icon"><i class="itext">&bull;</i></i>
-<a href="/dove/nova/home.html">Home</a>
-<a href="/dove/nova/page.html">Page</a>
-<a href="/dove/nova/404.html">404</a>
+                    </svg></i></i><b>Preview</b><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/nova/test.html">Test</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/nova/home.html">Home</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/nova/page.html">Page</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/nova/404.html">404</a>
               </p>
             </div>
           </nav>
