--- a/prime/home.html
+++ b/prime/home.html
@@ -16,6 +16,7 @@ index: false
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
     <meta id="_color_scheme" name="color-scheme" content="light dark"/>
     <meta id="_theme_color" name="theme-color" content="#222"/>
+    <style>.isvg svg { width:1em;height:1em }</style>
     <link id="_style" rel="stylesheet" href="{{ site.base_url }}/assets/prime/css/style.css?r={{ site.revision | default: '0' }}.{{ site.github.build_revision | default: '0' }}"/>
 {% include layout_head.html %}
 <!--[if lt IE 9]><script src="https://unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
@@ -32,16 +33,10 @@ index: false
             </header>
             <nav class="_nav">
               <div class="_layout">
-                <p>
-<a href="/dove/prime/"><b>Prime</b></a>
-<i class="_icon"><i class="isvg">
+                <p><a href="/dove/prime/"><b>Prime</b></a><i class="_icon"><i class="isvg">
                       <svg viewBox="0 0 24 24">
                         <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
-                      </svg></i></i>
-<a href="/dove/prime/preview.html">Preview</a>
-<i class="_icon"><i class="itext">&bull;</i></i> <b>Home</b>
-<a href="/dove/prime/page.html">Page</a>
-<a href="/dove/prime/404.html">404</a>
+                      </svg></i></i><a href="/dove/prime/preview.html">Preview</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/prime/test.html">Test</a><i class="_icon"><i class="itext">&bull;</i></i><b>Home</b><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/prime/page.html">Page</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/prime/404.html">404</a>
                 </p>
                 <hr class="thin"/>
               </div>
@@ -50,15 +45,13 @@ index: false
               <article class="_article">
                 <div class="_layout">
                   <style>
-                    .hero-box-1 { padding:0 }
-                    .hero-box-1 .site-description {
+                    .hero_block_1 .site-description {
                       margin-left: 3.3rem;
-                      font-weight: 300;
                       font-size: 1.1em;
                     }
-                    .hero-box-1 .hero-hr { margin-top:45px }
+                    .hero_block_1 .hero-hr { margin-top:45px }
                   </style>
-                  <div class="hero-box-1 box">
+                  <div class="hero_block_1">
                     <h1 id="_hero-title">⚒️ Heroic Title</h1>
                     <p class="site-description">Your site's description or mission statement.</p>
                   </div>
