--- a/prime/test.html
+++ b/prime/test.html
@@ -1,13 +1,13 @@
 ---
 layout: html
 use_pug: true
-title: Preview
+title: Test
 description: A theme development project.
 index: false
 ---
 <!DOCTYPE html>
 <html class="_prime_layout" lang="en-US">
-<!-- path   : prime/preview.html -->
+<!-- path   : prime/test.html -->
 <!-- layout : dove/_source/_layouts/prime -->
   <head>
     <meta charset="utf-8"/>
@@ -36,15 +36,15 @@ index: false
                 <p><a href="/dove/prime/"><b>Prime</b></a><i class="_icon"><i class="isvg">
                       <svg viewBox="0 0 24 24">
                         <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
-                      </svg></i></i><b>Preview</b><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/prime/test.html">Test</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/prime/home.html">Home</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/prime/page.html">Page</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/prime/404.html">404</a>
+                      </svg></i></i><a href="/dove/prime/preview.html">Preview</a><i class="_icon"><i class="itext">&bull;</i></i><b>Test</b><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/prime/home.html">Home</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/prime/page.html">Page</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/prime/404.html">404</a>
                 </p>
                 <hr class="thin"/>
               </div>
             </nav>
             <main class="_main">
               <article class="_article">
-                <div class="_layout">{%- capture preview %}{% include preview.md %}{%- endcapture %}
-{{ preview | markdownify }}
+                <div class="_layout">{%- capture test %}{% include test.md %}{%- endcapture %}
+{{ test | markdownify }}
                 </div>
               </article>
             </main>
@@ -54,7 +54,7 @@ index: false
                 <hr class="thin"/>
                 <p class="text-right text-gray"><small>
                     This site is open source.
-                    <a href="https://github.com/techie-joe/dove/edit/main/_source/prime/preview.html.pug">Improve this page</a>.</small></p>
+                    <a href="https://github.com/techie-joe/dove/edit/main/_source/prime/test.html.pug">Improve this page</a>.</small></p>
               </div>
             </footer>
           </div>
