--- a/prime/legacy.html
+++ b/prime/legacy.html
@@ -48,7 +48,7 @@ index: false
                 </div>
               </article>
             </main>
-            <footer class="_footer footer mt-5">
+            <footer class="_footer footer">
               <div class="_layout">
                 <hr class="thin"/>
                 <p class="text-right text-grey"><small>
