--- a/prime/preview.html
+++ b/prime/preview.html
@@ -48,7 +48,7 @@ index: false
                 </div>
               </article>
             </main>
-            <footer class="_footer footer mt-5">
+            <footer class="_footer footer">
               <div class="_layout">{%- capture footer %}{% include footer.md %}{%- endcapture %}
 {{ footer | markdownify }}
                 <hr class="thin"/>
