--- a/core/legacy.html
+++ b/core/legacy.html
@@ -35,18 +35,18 @@ index: false
               <div><a href="/dove/core/"><b>Core</b></a><i class="_icon"><i class="isvg">
                     <svg viewBox="0 0 24 24">
                       <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
-                    </svg></i></i><a href="/dove/core/preview.html">Preview</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/core/test.html">Test</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/core/home.html">Home</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/core/page.html">Page</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/core/404.html">404</a>
+                    </svg></i></i><a href="/dove/core/preview.html">Preview</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/core/home.html">Home</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/core/page.html">Page</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/core/404.html">404</a>
               </div>
             </div>
           </nav>
           <main class="_main">
-            <article class="_article _layout _960">{%- capture legacy %}{% include legacy.md %}{%- endcapture %}
+            <article class="_article _layout _960">{%- capture legacy %}{%- include preview-legacy.md %}{%- endcapture %}
 {{ legacy | markdownify }}
             </article>
           </main>
           <footer class="_footer">
             <div class="_layout _960">
-              <hr/>
+              <hr class="thin"/>
               <p class="text-right text-grey"><small>
                   This site is open source.
                   <a href="https://github.com/techie-joe/dove/edit/main/_source/core/legacy.html.pug">Improve this page</a>.</small></p>
