--- a/mallet/index.html
+++ b/mallet/index.html
@@ -32,7 +32,7 @@ index: false
             <div><b><b>Mallet</b></b><i class="_icon"><i class="isvg">
                   <svg viewBox="0 0 24 24">
                     <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
-                  </svg></i></i><a href="/dove/mallet/preview.html">Preview</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/test.html">Test</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/home.html">Home</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/page.html">Page</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/404.html">404</a>
+                  </svg></i></i><a href="/dove/mallet/preview.html">Preview</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/home.html">Home</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/page.html">Page</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/404.html">404</a>
             </div>
           </nav>
           <main class="_main">
@@ -78,9 +78,7 @@ index: false
             </article>
           </main>
           <footer class="_footer">
-            <hr/>
-            <p><code>// footer</code></p>
-            <hr/>
+            <hr class="thin"/>
             <p class="text-right text-grey"><small>
                 This site is open source.
                 <a href="https://github.com/techie-joe/dove/edit/main/_source/mallet/index.html.pug">Improve this page</a>.</small></p>
