--- a/prime/code-blocks.html
+++ b/prime/code-blocks.html
@@ -2,12 +2,12 @@
 index: false
 layout: html
 use_pug: true
-title: Not found
-description: The content you are looking for is not here.
+title: Code blocks
+description: A theme development project.
 ---
 <!DOCTYPE html>
 <html class="_prime_layout" lang="en-US">
-<!-- path   : prime/404.html -->
+<!-- path   : prime/code-block.html -->
 <!-- layout : dove/_source/_layouts/prime -->
   <head>
     <meta charset="utf-8"/>
@@ -36,7 +36,7 @@ description: The content you are looking for is not here.
                 <p><a href="/dove/prime/"><b>Prime</b></a><i class="_icon"><i class="isvg">
                       <svg viewBox="0 0 24 24">
                         <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
-                      </svg></i></i><a href="/dove/prime/preview.html">Preview</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/prime/home.html">Home</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/prime/page.html">Page</a><i class="_icon"><i class="itext">&bull;</i></i><b>404</b>
+                      </svg></i></i><a href="/dove/prime/preview.html">Preview</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/prime/home.html">Home</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/prime/page.html">Page</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/prime/404.html">404</a>
                 </p>
                 <hr class="thin"/>
               </div>
@@ -44,7 +44,8 @@ description: The content you are looking for is not here.
             <main class="_main">
               <article class="_article">
                 <div class="_layout">
-{%- include 404.md %}
+                  <h1>Code blocks</h1>{%- capture code-blocks %}{%- include preview-code-blocks.md %}{%- endcapture %}
+{{ code-blocks | markdownify }}
                 </div>
               </article>
             </main>
@@ -53,7 +54,7 @@ description: The content you are looking for is not here.
                 <hr class="thin"/>
                 <p class="text-right text-grey"><small>
                     This site is open source.
-                    <a href="https://github.com/techie-joe/dove/edit/main/_source/prime/404.html.pug">Improve this page</a>.</small></p>
+                    <a href="https://github.com/techie-joe/dove/edit/main/_source/prime/code-block.html.pug">Improve this page</a>.</small></p>
               </div>
             </footer>
           </div>
