--- a/prime/home.html
+++ b/prime/home.html
@@ -1,9 +1,9 @@
 ---
+index: false
 layout: html
 use_pug: true
 title: Home
 description: A theme development project.
-index: false
 ---
 <!DOCTYPE html>
 <html class="_prime_layout" lang="en-US">
@@ -36,7 +36,7 @@ index: false
                 <p><a href="/dove/prime/"><b>Prime</b></a><i class="_icon"><i class="isvg">
                       <svg viewBox="0 0 24 24">
                         <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
-                      </svg></i></i><a href="/dove/prime/preview.html">Preview</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/prime/test.html">Test</a><i class="_icon"><i class="itext">&bull;</i></i><b>Home</b><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/prime/page.html">Page</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/prime/404.html">404</a>
+                      </svg></i></i><a href="/dove/prime/preview.html">Preview</a><i class="_icon"><i class="itext">&bull;</i></i><b>Home</b><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/prime/page.html">Page</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/prime/404.html">404</a>
                 </p>
                 <hr class="thin"/>
               </div>
@@ -59,10 +59,9 @@ index: false
               </article>
             </main>
             <footer class="_footer footer">
-              <div class="_layout">{%- capture footer %}{% include footer.md %}{%- endcapture %}
-{{ footer | markdownify }}
+              <div class="_layout">
                 <hr class="thin"/>
-                <p class="text-right text-gray"><small>
+                <p class="text-right text-grey"><small>
                     This site is open source.
                     <a href="https://github.com/techie-joe/dove/edit/main/_source/prime/home.html.pug">Improve this page</a>.</small></p>
               </div>
