--- a/prime/index.html
+++ b/prime/index.html
@@ -1,9 +1,9 @@
 ---
+index: false
 layout: html
 use_pug: true
 title: Prime
 description: A theme development project.
-index: false
 ---
 <!DOCTYPE html>
 <html class="_prime_layout" lang="en-US">
@@ -42,21 +42,25 @@ index: false
                   <nav class="mv"><b>Html</b><i class="_icon"><i class="isvg">
                         <svg viewBox="0 0 24 24">
                           <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
-                        </svg></i></i><a href="/dove/prime/preview.html">Preview</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/prime/test.html">Test</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/prime/home.html">Home</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/prime/page.html">Page</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/prime/404.html">404</a>
+                        </svg></i></i><a href="/dove/prime/home.html">Home</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/prime/page.html">Page</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/prime/404.html">404</a>
                   </nav>
                   <nav class="mv"><b>Markdown</b><i class="_icon"><i class="isvg">
                         <svg viewBox="0 0 24 24">
                           <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
-                        </svg></i></i><a href="/dove/prime/md/preview.html">Preview</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/prime/md/home.html">Home</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/prime/md/page.html">Page</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/prime/md/404.html">404</a>
+                        </svg></i></i><a href="/dove/prime/md/home.html">Home</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/prime/md/page.html">Page</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/prime/md/404.html">404</a>
+                  </nav>
+                  <nav class="mv"><a href="/dove/prime/preview.html">Preview</a><i class="_icon"><i class="isvg">
+                        <svg viewBox="0 0 24 24">
+                          <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
+                        </svg></i></i><a href="/dove/prime/test.html">Test</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/prime/code-blocks.html">Code blocks</a>
                   </nav>
                 </div>
               </article>
             </main>
             <footer class="_footer footer">
-              <div class="_layout">{%- capture footer %}{% include footer.md %}{%- endcapture %}
-{{ footer | markdownify }}
+              <div class="_layout">
                 <hr class="thin"/>
-                <p class="text-right text-gray"><small>
+                <p class="text-right text-grey"><small>
                     This site is open source.
                     <a href="https://github.com/techie-joe/dove/edit/main/_source/prime/index.html.pug">Improve this page</a>.</small></p>
               </div>
