--- a/prime/index.html
+++ b/prime/index.html
@@ -38,17 +38,32 @@ description: A theme development project.
             <main class="_main">
               <article class="_article">
                 <div class="_layout">
-                  <h1>Prime</h1>
-                  <nav class="mv"><b>Html</b><i class="_icon"><i class="isvg">
+                  <style>
+                    .hero_block { padding:1rem 2rem }
+                    .hero_block .hero-title { margin-top:1rem }
+                    .hero_block .hero-description { margin-left: 3.3rem; font-size: 1.1em; }
+                    .hero_block .hero-hr { margin-top:45px }
+                  </style>
+                  <div class="hero_block box">
+                    <h1 class="hero-title">🦅 Prime</h1>
+                    <p class="hero-description">Simple theme for your site.</p>
+                  </div>
+                  <hr class="thin"/>
+                  <nav class="mv"><b><b>Prime</b></b><i class="_icon"><i class="isvg">
                         <svg viewBox="0 0 24 24">
                           <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
-                        </svg></i></i><a href="/dove/prime/preview.html">Preview</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/prime/home.html">Home</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/prime/page.html">Page</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/prime/404.html">404</a>
+                        </svg></i></i><a href="/dove/prime/preview.html">Preview</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/prime/home.html">Home</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/prime/page.html">Page</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/prime/post.html">Post</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/prime/404.html">404</a>
                   </nav>
-                  <nav class="mv"><b>Markdown</b><i class="_icon"><i class="isvg">
+                  <hr class="thin"/>
+                  <nav class="mv"><b>Prime</b><i class="_icon"><i class="isvg">
                         <svg viewBox="0 0 24 24">
                           <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
-                        </svg></i></i><a href="/dove/prime/md/preview.html">Preview</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/prime/md/home.html">Home</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/prime/md/page.html">Page</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/prime/md/404.html">404</a>
+                        </svg></i></i><b>md</b><i class="_icon"><i class="isvg">
+                        <svg viewBox="0 0 24 24">
+                          <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
+                        </svg></i></i><a href="/dove/prime/md/preview.html">Preview</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/prime/md/home.html">Home</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/prime/md/page.html">Page</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/prime/md/post.html">Post</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/prime/md/404.html">404</a>
                   </nav>
+                  <hr class="thin"/>
                   <nav class="mv"><b>Test</b><i class="_icon"><i class="isvg">
                         <svg viewBox="0 0 24 24">
                           <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
