--- a/prime/home.html
+++ b/prime/home.html
@@ -3,7 +3,7 @@ index: false
 layout: html
 use_pug: true
 title: Home
-description: A theme development project.
+description: Home template
 ---
 <!DOCTYPE html>
 <html class="_prime_layout" lang="en-US">
@@ -33,11 +33,11 @@ description: A theme development project.
             </header>
             <nav class="_nav">
               <div class="_layout">
-                <p><a href="/dove/prime/"><b>Prime</b></a><i class="_icon"><i class="isvg">
+                <nav class="mv"><a href="/dove/prime/"><b>Prime</b></a><i class="_icon"><i class="isvg">
                       <svg viewBox="0 0 24 24">
                         <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
-                      </svg></i></i><a href="/dove/prime/preview.html">Preview</a><i class="_icon"><i class="itext">&bull;</i></i><b>Home</b><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/prime/page.html">Page</a>
-                </p>
+                      </svg></i></i><a href="/dove/prime/preview.html">Preview</a><i class="_icon"><i class="itext">&bull;</i></i><b>Home</b><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/prime/page.html">Page</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/prime/post.html">Post</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/prime/404.html">404</a>
+                </nav>
                 <hr class="thin"/>
               </div>
             </nav>
@@ -45,21 +45,24 @@ description: A theme development project.
               <article class="_article">
                 <div class="_layout">
                   <style>
-                    .hero_block_1 .site-description {
-                      margin-left: 3.3rem;
-                      font-size: 1.1em;
-                    }
-                    .hero_block_1 .hero-hr { margin-top:45px }
+                    .hero_block { padding:1rem 2rem }
+                    .hero_block .hero-title { margin-top:1rem }
+                    .hero_block .hero-description { margin-left: 3.3rem; font-size: 1.1em; }
+                    .hero_block .hero-hr { margin-top:45px }
                   </style>
-                  <div class="hero_block_1">
-                    <h1 id="_hero-title">⚒️ Heroic Title</h1>
-                    <p class="site-description">Your site's description or mission statement.</p>
+                  <div class="hero_block box">
+                    <h1 class="hero-title">🦅 Heroic title</h1>
+                    <p class="hero-description">Your site's description or sub-title.</p>
                   </div>
+                  <hr class="thin"/>
+                  <p><code>// home content</code></p>
                 </div>
               </article>
             </main>
             <footer class="_footer footer">
               <div class="_layout">
+                <hr class="thin"/>
+                <p><code>// site footer</code></p>
                 <hr class="thin"/>
                 <p class="text-right text-grey"><small>
                     This site is open source.
