--- a/prime/legacy.html
+++ b/prime/legacy.html
@@ -33,11 +33,11 @@ description: A theme development project.
             </header>
             <nav class="_nav">
               <div class="_layout">
-                <p><a href="/dove/prime/"><b>Prime</b></a><i class="_icon"><i class="isvg">
+                <nav class="mv"><a href="/dove/prime/"><b>Prime</b></a><i class="_icon"><i class="isvg">
                       <svg viewBox="0 0 24 24">
                         <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
-                      </svg></i></i><a href="/dove/prime/preview.html">Preview</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/prime/home.html">Home</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/prime/page.html">Page</a>
-                </p>
+                      </svg></i></i><a href="/dove/prime/preview.html">Preview</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/prime/home.html">Home</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/prime/page.html">Page</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/prime/post.html">Post</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/prime/404.html">404</a>
+                </nav>
                 <hr class="thin"/>
               </div>
             </nav>
