--- a/prime/post.html
+++ b/prime/post.html
@@ -2,12 +2,12 @@
 index: false
 layout: html
 use_pug: true
-title: Test Code Blocks
-description: A theme development project.
+title: Post
+description: Post template
 ---
 <!DOCTYPE html>
 <html class="_prime_layout" lang="en-US">
-<!-- path   : prime/test_code-blocks.html -->
+<!-- path   : prime/post.html -->
 <!-- layout : dove/_source/_layouts/prime -->
   <head>
     <meta charset="utf-8"/>
@@ -36,7 +36,7 @@ description: A theme development project.
                 <nav class="mv"><a href="/dove/prime/"><b>Prime</b></a><i class="_icon"><i class="isvg">
                       <svg viewBox="0 0 24 24">
                         <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
-                      </svg></i></i><a href="/dove/prime/preview.html">Preview</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/prime/home.html">Home</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/prime/page.html">Page</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/prime/post.html">Post</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/prime/404.html">404</a>
+                      </svg></i></i><a href="/dove/prime/preview.html">Preview</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/prime/home.html">Home</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/prime/page.html">Page</a><i class="_icon"><i class="itext">&bull;</i></i><b>Post</b><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/prime/404.html">404</a>
                 </nav>
                 <hr class="thin"/>
               </div>
@@ -44,22 +44,23 @@ description: A theme development project.
             <main class="_main">
               <article class="_article">
                 <div class="_layout">
-                  <nav class="mv"><b>Test</b><i class="_icon"><i class="isvg">
-                        <svg viewBox="0 0 24 24">
-                          <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
-                        </svg></i></i><a href="/dove/prime/test_colors.html">Colors</a><i class="_icon"><i class="itext">&bull;</i></i><b>Code blocks</b>
-                  </nav>
-                  <hr class="thin"/>{%- capture code-blocks %}{%- include test_code-blocks.md %}{%- endcapture %}
-{{ code-blocks | markdownify }}
+                  <h1>Post title</h1>
+                  <p><code>// post content</code></p>
+                  <div class="mt-6"></div>
+                  <hr>
+                  <h2>Other posts</h2>{%- capture posts %}{%- include posts.md %}{%- endcapture %}
+{{ posts | markdownify }}
                 </div>
               </article>
             </main>
             <footer class="_footer footer">
               <div class="_layout">
                 <hr class="thin"/>
+                <p><code>// site footer</code></p>
+                <hr class="thin"/>
                 <p class="text-right text-grey"><small>
                     This site is open source.
-                    <a href="https://github.com/techie-joe/dove/edit/main/_source/prime/test_code-blocks.html.pug">Improve this page</a>.</small></p>
+                    <a href="https://github.com/techie-joe/dove/edit/main/_source/prime/post.html.pug">Improve this page</a>.</small></p>
               </div>
             </footer>
           </div>
