--- a/prime/index.html
+++ b/prime/index.html
@@ -3,7 +3,7 @@ index: false
 layout: html
 use_pug: true
 title: Prime
-description: A theme development project.
+description: Simple theme for your site.
 ---
 <!DOCTYPE html>
 <html class="_prime_layout" lang="en-US">
