--- a/prime/page.html
+++ b/prime/page.html
@@ -3,7 +3,7 @@ index: false
 layout: html
 use_pug: true
 title: Page
-description: Page template
+description: Page template.
 ---
 <!DOCTYPE html>
 <html class="_prime_layout" lang="en-US">
