--- a/prime/post.html
+++ b/prime/post.html
@@ -3,7 +3,7 @@ index: false
 layout: html
 use_pug: true
 title: Post
-description: Post template
+description: Post template.
 ---
 <!DOCTYPE html>
 <html class="_prime_layout" lang="en-US">
