--- a/prime/404.html
+++ b/prime/404.html
@@ -28,7 +28,7 @@ description: We can't find what you are looking for.
           <div class="container-lg px-3 my-5 markdown-body">
             <header class="_header">
               <div class="_layout">
-                <h1>{% include prime/logo.html %}</h1>
+                <h1>{% include dove/logo.html name="prime" %}</h1>
               </div>
             </header>
             <nav class="_nav">
