--- a/core/legacy.html
+++ b/core/legacy.html
@@ -1,9 +1,9 @@
 ---
+index: false
 layout: html
 use_pug: true
 title: Legacy
 description: A theme development project.
-index: false
 ---
 <!DOCTYPE html>
 <html class="_core_layout" lang="en-US">
@@ -27,16 +27,14 @@ index: false
         <div class="_layout">
           <header class="_header">
             <div class="_layout">
-              <div class="_logo"><a href="/dove/">Dove</a></div>
+              <h1>{% include dove/logo.html name="core" %}</h1>
             </div>
           </header>
           <nav class="_nav">
             <div class="_layout _960">
-              <div><a href="/dove/core/"><b>Core</b></a><i class="_icon"><i class="isvg">
-                    <svg viewBox="0 0 24 24">
-                      <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
-                    </svg></i></i><a href="/dove/core/preview.html">Preview</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/core/home.html">Home</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/core/page.html">Page</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/core/404.html">404</a>
-              </div>
+              <p><a href="/dove/core/preview.html">Preview</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/core/home.html">Home</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/core/page.html">Page</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/core/post.html">Post</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/core/404.html">404</a>
+              </p>
+              <hr class="thin"/>
             </div>
           </nav>
           <main class="_main">
