--- a/core/page.html
+++ b/core/page.html
@@ -1,9 +1,9 @@
 ---
+index: false
 layout: html
 use_pug: true
 title: Page
-description: A theme development project.
-index: false
+description: Page template.
 ---
 <!DOCTYPE html>
 <html class="_core_layout" lang="en-US">
@@ -27,26 +27,30 @@ index: false
         <div class="_layout">
           <header class="_header">
             <div class="_layout">
-              <div class="_logo"><a href="/dove/">Dove</a></div>
+              <h1>{% include dove/logo.html name="core" %}</h1>
             </div>
           </header>
           <nav class="_nav">
             <div class="_layout _960">
-              <div><a href="/dove/core/"><b>Core</b></a><i class="_icon"><i class="isvg">
-                    <svg viewBox="0 0 24 24">
-                      <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
-                    </svg></i></i><a href="/dove/core/preview.html">Preview</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/core/home.html">Home</a><i class="_icon"><i class="itext">&bull;</i></i><b>Page</b><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/core/404.html">404</a>
-              </div>
+              <p><a href="/dove/core/preview.html">Preview</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/core/home.html">Home</a><i class="_icon"><i class="itext">&bull;</i></i><b>Page</b><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/core/post.html">Post</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/core/404.html">404</a>
+              </p>
+              <hr class="thin"/>
             </div>
           </nav>
           <main class="_main">
             <article class="_article _layout _960">
-              <h1>Page</h1>
-              <p><code>// content for : Page</code></p>
+              <h1>Page title</h1>
+              <p><code>// page content</code></p>
+              <div class="mt-6"></div>
+              <hr>
+              <h2>Other pages</h2>{%- capture pages %}{%- include pages.md %}{%- endcapture %}
+{{ pages | markdownify }}
             </article>
           </main>
           <footer class="_footer">
             <div class="_layout _960">
+              <hr class="thin"/>
+              <p><code>// site footer</code></p>
               <hr class="thin"/>
               <p class="text-right text-grey"><small>
                   This site is open source.
