--- a/core/post.html
+++ b/core/post.html
@@ -2,12 +2,12 @@
 index: false
 layout: html
 use_pug: true
-title: Home
-description: Home template
+title: Post
+description: Post template.
 ---
 <!DOCTYPE html>
 <html class="_core_layout" lang="en-US">
-<!-- path   : core/home.html -->
+<!-- path   : core/post.html -->
 <!-- layout : dove/_source/_layouts/core -->
   <head>
     <meta charset="utf-8"/>
@@ -32,25 +32,19 @@ description: Home template
           </header>
           <nav class="_nav">
             <div class="_layout _960">
-              <p><a href="/dove/core/preview.html">Preview</a><i class="_icon"><i class="itext">&bull;</i></i><b>Home</b><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/core/page.html">Page</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/core/post.html">Post</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/core/404.html">404</a>
+              <p><a href="/dove/core/preview.html">Preview</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/core/home.html">Home</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/core/page.html">Page</a><i class="_icon"><i class="itext">&bull;</i></i><b>Post</b><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/core/404.html">404</a>
               </p>
               <hr class="thin"/>
             </div>
           </nav>
           <main class="_main">
             <article class="_article _layout _960">
-              <style>
-                .hero_block { padding:1rem 2rem }
-                .hero_block .hero-title { margin-top:1rem }
-                .hero_block .hero-description { margin-left: 3.3rem; font-size: 1.1em; }
-                .hero_block .hero-hr { margin-top:45px }
-              </style>
-              <div class="hero_block box">
-                <h1 class="hero-title">🧿 Crude title</h1>
-                <p class="hero-description">Your site's description or sub-title.</p>
-              </div>
-              <hr class="thin"/>
-              <p><code>// home content</code></p>
+              <h1>Post title</h1>
+              <p><code>// post content</code></p>
+              <div class="mt-6"></div>
+              <hr>
+              <h2>Other posts</h2>{%- capture posts %}{%- include posts.md %}{%- endcapture %}
+{{ posts | markdownify }}
             </article>
           </main>
           <footer class="_footer">
@@ -60,7 +54,7 @@ description: Home template
               <hr class="thin"/>
               <p class="text-right text-grey"><small>
                   This site is open source.
-                  <a href="https://github.com/techie-joe/dove/edit/main/_source/core/home.html.pug">Improve this page</a>.</small></p>
+                  <a href="https://github.com/techie-joe/dove/edit/main/_source/core/post.html.pug">Improve this page</a>.</small></p>
             </div>
           </footer>
         </div>
