--- a/core/home.html
+++ b/core/home.html
@@ -46,7 +46,7 @@ description: Home template
                 .hero_block .hero-hr { margin-top:45px }
               </style>
               <div class="hero_block box">
-                <h1 class="hero-title">🧿 Crude title</h1>
+                <h1 class="hero-title">💎 Main title</h1>
                 <p class="hero-description">Your site's description or sub-title.</p>
               </div>
               <hr class="thin"/>
