--- a/prime/index.html
+++ b/prime/index.html
@@ -55,19 +55,13 @@ description: Simple theme for your site.
                         </svg></i></i><a href="/dove/prime/preview.html">Preview</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/prime/home.html">Home</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/prime/page.html">Page</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/prime/post.html">Post</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/prime/404.html">404</a>
                   </nav>
                   <hr class="thin"/>
-                  <nav class="mv"><b>Prime</b><i class="_icon"><i class="isvg">
-                        <svg viewBox="0 0 24 24">
-                          <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
-                        </svg></i></i><b>md</b><i class="_icon"><i class="isvg">
+                  <nav class="mv"><b>Markdown</b><i class="_icon"><i class="isvg">
                         <svg viewBox="0 0 24 24">
                           <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
                         </svg></i></i><a href="/dove/prime/md/preview.html">Preview</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/prime/md/home.html">Home</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/prime/md/page.html">Page</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/prime/md/post.html">Post</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/prime/md/404.html">404</a>
                   </nav>
                   <hr class="thin"/>
-                  <nav class="mv"><b><b>Prime</b></b><i class="_icon"><i class="isvg">
-                        <svg viewBox="0 0 24 24">
-                          <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
-                        </svg></i></i><b>Test</b><i class="_icon"><i class="isvg">
+                  <nav class="mv"><b>Test</b><i class="_icon"><i class="isvg">
                         <svg viewBox="0 0 24 24">
                           <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
                         </svg></i></i><a href="/dove/prime/test_colors.html">Colors</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/prime/test_code-blocks.html">Code blocks</a>
